add jvm option for memory xtdb storage